syntax = "proto3";

package proto.dm.kendaql;
option go_package = "gitlab.kenda.com.tw/kenda/commons/v2/proto/golang/dm/kendaql";

import "google/protobuf/wrappers.proto";

import "proto/dm/kendaql/db.proto";
import "proto/dm/kendaql/field.proto";
import "proto/dm/kendaql/table.proto";

message MutationRequest {
  Database db            = 1;
  repeated Mutation sqls = 2;
}

message Mutation {
  MutationType type     = 1;
  Table        table    = 2;
  repeated Field fields = 3;
  LogicalGroup   filter = 4;
}

enum MutationType {
  MUTATION_TYPE_UNSPECIFIED = 0;
  INSERT                    = 1;
  UPDATE                    = 2;
  DELETE                    = 3;
}

message MutationReply {
  google.protobuf.Int64Value last_insert_id = 1;
  google.protobuf.Int64Value rows_affected  = 2;
}